--- a/docs/reveal-hugo/themes/robot-lung.css
+++ b/docs/reveal-hugo/themes/robot-lung.css
@@ -295,7 +295,7 @@ body {
  * IMAGES
  *********************************************/
 .reveal section img {
-  margin: 15px 0px;
+  /* margin: 15px 0px; */
   background: none; /* commenting this out to remove white logo background rgba(255, 255, 255, 0.12); */
   border: none; /* 4px solid #363636; */
   box-shadow: none; } /* 0 0 10px rgba(0, 0, 0, 0.15); } */
