--- a/docs/reveal-hugo/themes/robot-lung.css
+++ b/docs/reveal-hugo/themes/robot-lung.css
@@ -76,6 +76,9 @@ section.has-light-background, section.has-light-background h1, section.has-light
       .line.right {
         width: 15px; } }
 
+.reveal.has-dark-background .line {
+  display: none; }
+
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
@@ -295,10 +298,10 @@ body {
  * IMAGES
  *********************************************/
 .reveal section img {
-  /* margin: 15px 0px; */
-  background: none; /* commenting this out to remove white logo background rgba(255, 255, 255, 0.12); */
-  border: none; /* 4px solid #363636; */
-  box-shadow: none; } /* 0 0 10px rgba(0, 0, 0, 0.15); } */
+  margin: 15px 0px;
+  background: rgba(255, 255, 255, 0.12);
+  border: 4px solid #363636;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
 .reveal section img.plain {
   border: 0;
@@ -331,3 +334,7 @@ body {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+.reveal .progress {
+  z-index: 1000;
+  color: #FF80A1; }
