--- a/docs/reveal-js/css/theme/black.css
+++ b/docs/reveal-js/css/theme/black.css
@@ -228,10 +228,10 @@ body {
  * IMAGES
  *********************************************/
 .reveal section img {
-  /* margin: 15px 0px; */
-  background: none; /* commenting this out to remove white logo background rgba(255, 255, 255, 0.12); */
-  border: none; /* 4px solid #fff; */
-  box-shadow: none; } /* 0 0 10px rgba(0, 0, 0, 0.15); } */
+  margin: 15px 0px;
+  background: rgba(255, 255, 255, 0.12);
+  border: 4px solid #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
 .reveal section img.plain {
   border: 0;
