Added terminal animation, corner logo, additional blurbs

--- a/layouts/partials/home/reveal-hugo/head.html
+++ b/layouts/partials/home/reveal-hugo/head.html
@@ -1,8 +1,8 @@
 <!-- This partial is included before the end of the head tag for only the 'example' presentation -->
 <!-- A common use would be to add CSS to the page to customize the theme -->
 
+
 <style>
-/* Add padding, margin and a hover effect on code samples */
 .reveal section img {
   background: none; /* commenting this out to remove white logo background rgba(255, 255, 255, 0.12); */
   border: none; /* none; /* 4px solid #fff; */
@@ -11,6 +11,7 @@
 
 body {
   background: #000
+  /* background: #2e6c6c /* logo color */
 }
 
 body { /* adding logo to corner */
@@ -21,3 +22,5 @@ body { /* adding logo to corner */
 }
 
 </style>
+
+<link rel="stylesheet" href="termynal.css">
